@@ -21,7 +21,10 @@ if { [prepare_for_testing break-always.exp break-always break-always.c] } {
 
 set bar_location [gdb_get_line_number "break in bar" break-always.c]
 
-gdb_test "set breakpoint always-inserted 1" ""
+gdb_test "set breakpoint always-inserted on" ""
+
+gdb_test "show breakpoint always-inserted" "mode is on\." \
+    "confirm breakpoint always-inserted"
 
 runto foo
 
